# agent_core_deep_research

./: .bedrock_agentcore.yaml  .gitignore  Dockerfile  copilot.prompt.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
3lo.test/: 1_local_direct.py  ReadMe.md  oauth2_callback_server.py  requirements.txt
AgentcoreMemoryDR/: Dockerfile  agent.py  agent_cli.py  agent_runtime.py  enable_memory_replication.py  multi_region_memory_saver.py  requirements.txt  test_agent_aws.py  test_agent_local.py
AgentcoreMemoryDR/terraform/: main.tf
MultiServerMCPClient/: hosting_mcp_server_iam_auth.ipynb  invoke_mcp_parallel.py  mcp_client_remote_parallel.py  session_behavior_analysis.md  test_MultiServerMCPClient.py
cdk/: app.py  cdk.json  deep_research_stack.py
cdk/cdk.out/: BasicAgentDemo.assets.json  BasicAgentDemo.template.json  DeepResearch.assets.json  DeepResearch.template.json  DeepResearchScopingAgentStack.assets.json  DeepResearchScopingAgentStack.template.json  manifest.json  tree.json
cdk/infra_utils/: __init__.py  agentcore_role.py  (+1 more)
langgraph_streaming/: __init__.py  agentcore_langgraph_math_streaming.py  client_invoke_deployed_runtime.py  client_invoke_streaming.py  deploy_to_agentcore_runtime.py  requirements.runtime.txt  worker_evaluator_math_agent.py
simple.test/: my_langgraph_agent.py  my_strands_agent.py  requirements.txt  test_my_langgraph_agent.py  test_my_strands_agent.py
src/: .bedrock_agentcore.yaml  .dockerignore  Dockerfile  agent_core.ipynb  agent_core_direct_deploy.ipynb  agent_core_for_cdk.ipynb  deep_research.ipynb  requirements.txt
(+10 files in other folders)
